--- a/lib/AndroidManifest.xml
+++ b/lib/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.multiselectlistpreferencecompat"
+    package="com.h6ah4i.android.multiselectlistpreferencecompat"
     android:versionCode="1"
     android:versionName="1.0" >
 
