--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,22 @@
  *    limitations under the License.
  */
 
-android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.1'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.2'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
     }
 }
