--- a/common/android-set-common-properties.gradle
+++ b/common/android-set-common-properties.gradle
@@ -14,19 +14,12 @@
  *    limitations under the License.
  */
 
-def joinPath(base, append) {
-    return (new File(base, append)).getPath()   
-}
+android {
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
-def useLegacyLayoutFiles(sourceSet, basePath) {
-    sourceSet.manifest.srcFile joinPath(projectBasePath, 'AndroidManifest.xml')
-    sourceSet.java.srcDirs = [joinPath(basePath, 'src')]
-    sourceSet.res.srcDirs = [joinPath(basePath, 'res')]
-    sourceSet.assets.srcDirs = [joinPath(basePath, 'assets')]
-    // sourceSet.jniLibs.srcDir joinPath(basePath, 'libs')
-}
-
-// Export methods by turning them into closures
-ext {
-    useLegacyLayoutFiles = this.&useLegacyLayoutFiles
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
